tests/fail/recursion-infinite-2.co
//[c]This is a more subtle infinite recursion
//[c]
function g (x)
	f (1)
	return 1

function f (x)
	return g (1)

function main
	f (1)
